--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li><a href="{{ "/" | relURL }}">Home</a></li>
-    <li><a href="{{ "/about/" | relURL }}">About</a></li>
-    <li><a href="{{ "/posts/" | relURL }}">Blog</a></li>
+    <li><a href='{{ "" | absURL }}'>Home</a></li>
+    <li><a href='{{ "about/" | absURL }}'>About</a></li>
+    <li><a href='{{ "posts/" | absURL }}'>Blog</a></li>
 
   </ul>
 </nav>
