--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -18,4 +18,78 @@ nav
     text-decoration: none
     text-transform: uppercase
     border-bottom: 2px solid #fff
+
+
+
+
+@import 'mixins'
+
+
+
+
+
+
+
+.intro
+  +flexColumnAlignCenter
+  justify-content: center
+  height: 100vh
+
+  &__container
+    +flexColumnAlignCenter
+
+  &__image
+    border-radius: 50%
+    width: 200px
+    margin-bottom: 1rem
+
+  &__overline, &__desc
+    font-weight: 700
+
+  &__overline
+    
+
+  &__desc
+    font-style: italic
+    margin-bottom: 1rem
+
+  &__button
+    +reset
+    width: 40px
+    height: 40px
+
+    svg
+
+      #down-circle1
+        transition: all 0.3s ease-in-out
+        fill: white
+
+      #down-circle2
+        transition: all 0.3s ease-in-out
+        stroke: black
+
+      #down-polyline
+        transition: all 0.3s ease-in-out
+        stroke: black
+
+      &:hover
+        #down-circle1
+          fill: black
+
+        #down-polyline
+          stroke: white
+
+    
+
+      
+
+      // &:hover
+      //   circle
+      //     fill: $color-primary
+
+      //   polyline
+      //     stroke: $color-primary
+
+
+
    
