--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ .Site.Title }} | {{ .Page.Title }}</title>
+<title>{{ .Site.Title }} -- {{ .Page.Title }}</title>
 {{ $style := resources.Get "sass/main.sass" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
+<meta name="description" content="Garrett Siegel: Front End Developer | HTML, CSS, JavaScript | Explore my Portfolio & Discover High-Quality Web Solutions | Get in Touch for Custom Projects.">
 <link rel="stylesheet" href="{{ $style.Permalink }}">
