--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   {{ partial "head.html" . }}
+ 
 </head>
 <body>
   {{ partial "nav.html" }}
@@ -11,5 +12,10 @@
   </main>
   
   {{ partial "footer.html" . }}
+  <script type="module" src="js/app.js"></script>
+
+ 
+
+
 </body>
 </html>
