--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,3 +5,13 @@
 {{ $style := resources.Get "sass/main.sass" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
 <meta name="description" content="Garrett Siegel: Front End Developer | HTML, CSS, JavaScript | Explore my Portfolio & Discover High-Quality Web Solutions | Get in Touch for Custom Projects.">
 <link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+
+<!-- Import GSAP core -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+
+<!-- Import ScrollToPlugin -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"></script>
+
+<!-- Import ScrollTrigger -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
