--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
   </main>
   
   {{ partial "footer.html" . }}
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="/js/app.js"></script>
 
  
 
