--- a/assets/sass/_current.sass
+++ b/assets/sass/_current.sass
@@ -1,5 +1,9 @@
 .current
 
+  &__title
+    text-align: center
+    margin-bottom: 2rem
+
   &__subhead
     text-align: center
     margin-bottom: 1rem
