--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,11 @@
 {{ with .Params.hide_footer }}
 <!-- No footer here -->
 {{ else }}
-  <footer>
+  <!-- <footer>
   Website made by {{ .Site.Params.name }} in {{ now.Year }}
+  Professionally designed and developed by Garrett Siegel - Front End Developer & Graphic Designer © 2023. All rights reserved.
+  </footer> -->
+  <footer>
+    <p>Professionally designed and developed by   Website made by {{ .Site.Params.name }} - Front End Developer & Graphic Designer - {{ now.Year }}.</p>
   </footer>
 {{ end }}
