--- a/layouts/posts/list.html
+++ b/layouts/posts/list.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-<h1>My Posts</h1>
+<div class="blog-wrapper">
+
+<h2>My Blog Posts</h2>
 <ul>
 {{ range .Pages }}
   <li>
@@ -7,4 +9,6 @@
   </li>
 {{ end }}
 </ul>
+</div>
+
 {{ end }}
