Added content, footer work

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -10,9 +10,11 @@ $font-hind: 'Hind', sans-serif
   margin: 0
   box-sizing: border-box
   font-family: $font-mont
+
   
-nav, footer
+nav
   background-color: #303030
+  
   ul
     display: flex
     padding: .75rem 1.25rem
@@ -29,6 +31,7 @@ nav, footer
     // border-bottom: 2px solid #fff
 
 footer
+  background-color: #303030
   p
     text-align: center
     color: #fff
@@ -42,6 +45,7 @@ footer
 @import 'about'
 @import 'current'
 @import 'typography'
+@import 'footer'
 
 img
   width: 100%
@@ -127,3 +131,4 @@ img
 
 .blog-wrapper, .graphic-design
   min-height: 150vh
+
