--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -39,18 +39,18 @@ footer
     font-size: 14px
 
 
-
+@import 'typography'
 @import 'nav'
 @import 'mixins'
 @import 'about'
 @import 'current'
-@import 'typography'
 @import 'footer'
+
 
 img
   width: 100%
   
-.main-site
+// .main-site
   // background-color: #007FFF
 
 
@@ -83,7 +83,7 @@ img
   &__overline, &__desc
     font-weight: 700
 
-  &__overline
+  // &__overline
     
 
   &__desc
