--- a/assets/sass/_current.sass
+++ b/assets/sass/_current.sass
@@ -1,8 +1,23 @@
 .current
 
-  &__title
-    text-align: center
-    margin-bottom: 2rem
+  &__header
+    background-color: #303030
+    margin-bottom: 3rem
+    padding: 2rem
+    color: #fff
+
+    .current__title
+      color: #fff
+      letter-spacing: 1.5px
+      margin-bottom: .25rem
+
+    .current__span
+      text-transform: uppercase
+      font-weight: 700
+
+  // &__title
+  //   text-align: center
+  //   margin-bottom: 2rem
 
   &__subhead
     text-align: center
