--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a href='{{ "" | absURL }}'>Home</a></li>
-    <!-- <li><a href='{{ "about/" | absURL }}'>About</a></li> -->
+    <li><a href='{{ "web-development/" | absURL }}'>Web Development</a></li>
     <li><a href='{{ "graphic-motion-design/" | absURL }}'>Graphic & Motion Design</a></li>
     <li><a href='https://www.upwork.com/fl/garrettsubmurged' target="_blank">Upwork</a></li>
     <li style="margin-left: auto"><a href='{{ "posts/" | absURL }}'>Blog</a></li>
