Under construction banner

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,8 @@
  
 </head>
 <body>
+  <div class="construction">🚧 Currently updating my portfolio – exciting new site coming soon! 🚧</div>
+
   {{ partial "nav.html" }}
   <main>
     {{ block "main" . }}
