--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -132,3 +132,10 @@ img
 .blog-wrapper, .graphic-design, .web-development
   min-height: 150vh
 
+.construction
+  background-color: #fa6304
+  color: white
+  font-weight: 900
+  text-transform: uppercase
+  text-align: center
+  padding: 0.5rem 0
