--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -139,3 +139,16 @@ img
   text-transform: uppercase
   text-align: center
   padding: 0.5rem 0
+
+
+.projects
+  display: flex
+  
+
+.card + .card
+  margin-left: 1rem
+
+.card__image
+  width: 100%
+  height: 250px
+  object-fit: cover
