--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -37,7 +37,10 @@ footer
 
   &__left
     li
-      line-height: 1
+      // background-color: green
+      padding-bottom: 40px
+      
+      // line-height: 1
 
   &__ul
     &.flex
