Card updates, CSS work

--- a/assets/sass/_graphic.sass
+++ b/assets/sass/_graphic.sass
@@ -18,3 +18,12 @@
 //   display: flex
 //   flex-direction: column
 //   justify-content: center
+
+.module.graphic-design
+  padding: 2rem 0
+  ul
+    li
+      list-style-type: none
+
+.skills-header
+  margin-top: 2rem
