--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -1,18 +1,27 @@
 footer
+  background-color: #303030
   +flexColumnAlignCenter
   color: #fff
-  padding: 2rem 0
+  padding: 2rem 1rem
 
- 
+  p
+    text-align: center
+    color: #fff
+    padding: 1rem 0
+    font-size: 14px
 
 .footer
+  &__credits
+    max-width: 700px
+  
   &__container
+
     display: flex
+    flex-direction: column
     justify-content: space-evenly
 
   
-
-    // ul
+    
 
     li
       list-style-type: none
@@ -37,10 +46,7 @@ footer
 
   &__left
     li
-      // background-color: green
       padding-bottom: 40px
-      
-      // line-height: 1
 
   &__ul
     &.flex
@@ -51,3 +57,8 @@ footer
   
   path
     fill: #fff
+
+@media screen and (min-width: 768px)
+  .footer
+    &__container
+      flex-direction: row
