--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -11,32 +11,19 @@ $font-hind: 'Hind', sans-serif
   box-sizing: border-box
   font-family: $font-mont
 
-  
-nav
-  background-color: #303030
-  
-  ul
-    display: flex
-    padding: .75rem 1.25rem
-  li
-    color: #fff
-    list-style-type: none
-  li + li
-    margin-left: 1rem
-  a
-    color: #fff
-    text-decoration: none
-    font-size: 14px
-    // text-transform: uppercase
-    // border-bottom: 2px solid #fff
+body
+  overflow-x: hidden
 
-footer
-  background-color: #303030
-  p
-    text-align: center
-    color: #fff
-    padding: 1rem 0
-    font-size: 14px
+main
+  padding: 0 1rem
+
+@media screen and (min-width: 768px)  
+  main
+    padding: 0
+
+
+
+
 
 
 @import 'typography'
@@ -45,7 +32,8 @@ footer
 @import 'about'
 @import 'current'
 @import 'footer'
-
+@import 'card'
+@import 'graphic'
 
 img
   width: 100%
@@ -116,39 +104,22 @@ img
         #down-polyline
           stroke: white
 
-    
-
-      
-
-      // &:hover
-      //   circle
-      //     fill: $color-primary
-
-      //   polyline
-      //     stroke: $color-primary
-
-
-
 .blog-wrapper, .graphic-design, .web-development
   min-height: 150vh
 
-.construction
-  background-color: #fa6304
-  color: white
-  font-weight: 900
-  text-transform: uppercase
-  text-align: center
-  padding: 0.5rem 0
-
-
 .projects
-  display: flex
+  display: grid
+  grid-template-columns: 1fr
+  grid-gap: 1rem
+  // grid-auto-rows: 1fr
+
+@media screen and (min-width: 768px)
+  .projects
+    display: grid
+    grid-template-columns: 1fr 1fr
+    grid-gap: 1rem
+    margin-top: 2rem
   
+.intro__name, .intro__desc
+  text-align: center
 
-.card + .card
-  margin-left: 1rem
-
-.card__image
-  width: 100%
-  height: 250px
-  object-fit: cover
