--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -78,8 +78,11 @@
           </a>
         </li>
       </ul>
+
+    </div>
+    <div class="footer__credits">
+      <p>Professionally designed and developed by   Website made by {{ .Site.Params.name }} - Front End Developer & Graphic Designer - {{ now.Year }}.</p>
     </div>
     
-    <p>Professionally designed and developed by   Website made by {{ .Site.Params.name }} - Front End Developer & Graphic Designer - {{ now.Year }}.</p>
   </footer>
 {{ end }}
