--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -4,7 +4,7 @@
     <li><a href='{{ "web-development/" | absURL }}'>Web Development</a></li>
     <li><a href='{{ "graphic-motion-design/" | absURL }}'>Graphic & Motion Design</a></li>
     <li><a href='https://www.upwork.com/fl/garrettsubmurged' target="_blank">Upwork</a></li>
-    <li style="margin-left: auto"><a href='{{ "posts/" | absURL }}'>Blog</a></li>
+    <li><a href='{{ "posts/" | absURL }}'>Blog</a></li>
 
   </ul>
 </nav>
