Add: color palette, shortcodes; Refactor: data files; Style: updates

--- a/assets/sass/_graphic.sass
+++ b/assets/sass/_graphic.sass
@@ -1,24 +1,3 @@
-// .spacer
-//   width: 100%
-//   background-color: green
-//   height: 50vh
-
-// .gallery
-//   display: flex
-
-// .left
-//   width: 50%
-//   background-color: red
-
-
-// .right
-//   width: 50%
-//   background-color: blue
-//   height: 100vh
-//   display: flex
-//   flex-direction: column
-//   justify-content: center
-
 .module.graphic-design
   padding: 2rem 0
   ul
@@ -27,3 +6,102 @@
 
 .skills-header
   margin-top: 2rem
+
+
+// .scrollytelly
+//   display: flex
+
+//   &__left
+//     width: 50%
+    
+//     &-item
+//       max-height: 90vh
+//     // padding: 0 1rem
+//   &___right
+//     width: 50%
+//     // padding: 0 1rem
+//   &__text-box
+//     height: 100vh
+
+
+
+
+
+
+
+// .spacer
+//   height: 100vh
+//   width: 100vw
+//   background: #ddd
+
+// .gallery h1 
+// 	font-size: clamp(2em, 4vw, 6em)
+
+
+// .gallery p 
+// 	font-size: clamp(1.4em, 2.5vw, 5em)
+// 	line-height: 1.4
+
+
+
+// .gallery 
+//   display: flex
+
+
+// .left 
+// 	width: 50%
+
+
+// .right 
+// 	height: 100vh
+// 	width: 50%
+// 	display: flex
+// 	flex-direction: column
+// 	justify-content: center
+
+
+// .desktopContent 
+// 	margin: auto
+// 	width: 80%
+
+
+// .desktopContentSection 
+// 	height: 100vh
+// 	display: flex
+// 	flex-direction: column
+// 	justify-content: center
+
+
+
+
+
+
+// .desktopPhotos 
+// 	width: 40vw
+// 	height: 40vw
+// 	border-radius: 20px
+// 	position: relative
+// 	overflow: hidden
+// 	box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.4)
+
+
+// .desktopPhoto 
+// 	position: absolute
+// 	width: 100%
+// 	height: 100%
+
+
+// .red
+// 	background: crimson
+
+
+// .green
+// 	background: MediumSeaGreen
+
+
+// .blue 
+// 	background: dodgerblue
+
+
+// .pink
+// 	background: deepPink
