--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -23,5 +23,5 @@ nav
     li + li
       margin-left: 1rem
 
-    li:last-child
-      margin-left: auto
+    // li:last-child
+    //   margin-left: auto
