--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -25,15 +25,16 @@ main
 
 
 
-
+@import 'colors'
 @import 'typography'
 @import 'nav'
 @import 'mixins'
 @import 'about'
-@import 'current'
+@import 'recent'
 @import 'footer'
 @import 'card'
 @import 'graphic'
+@import 'webdev'
 
 img
   width: 100%
@@ -104,7 +105,7 @@ img
         #down-polyline
           stroke: white
 
-.blog-wrapper, .graphic-design, .web-development
+.blog-wrapper, .graphic-design, .webdev
   min-height: 150vh
 
 .projects
