--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,9 @@
 <nav>
   <ul>
     <li><a href='{{ "" | absURL }}'>Home</a></li>
-    <li><a href='{{ "web-development/" | absURL }}'>Web Development</a></li>
-    <li><a href='{{ "graphic-motion-design/" | absURL }}'>Graphic & Motion Design</a></li>
+    <li><a href='{{ "web/" | absURL }}'>Web Development</a></li>
+    <li><a href='{{ "graphic/" | absURL }}'>Graphic & Motion Design</a></li>
     <li><a href='https://www.upwork.com/fl/garrettsubmurged' target="_blank">Upwork</a></li>
-    <li><a href='{{ "posts/" | absURL }}'>Blog</a></li>
-
+    <!-- <li><a href='{{ "posts/" | absURL }}'>Blog</a></li> -->
   </ul>
 </nav>
