--- a/assets/sass/_typography.sass
+++ b/assets/sass/_typography.sass
@@ -13,14 +13,14 @@ p, div, li
   // line-height: 1.3
 
 .link a
-  color: red
+  color: $color-blue-md
   text-decoration: underline
   text-decoration-thickness: 2px
   font-weight: 700
   transition: all 0.2s ease-in-out
 
   &:hover
-    color: green
+    color: $color-blue-dk
 
 h1
   font-size: 3.5rem
