--- a/assets/sass/_webdev.sass
+++ b/assets/sass/_webdev.sass
@@ -25,3 +25,16 @@
 
     & p
       font-weight: 700
+      
+  .projects
+    display: grid
+    grid-template-columns: 1fr
+    grid-gap: 1rem
+    // grid-auto-rows: 1fr
+
+  @media screen and (min-width: 768px)
+    .projects
+      display: grid
+      grid-template-columns: 1fr
+      grid-gap: 1rem
+      margin-top: 2rem
