--- a/assets/sass/_card.sass
+++ b/assets/sass/_card.sass
@@ -20,6 +20,9 @@
 
   &__image
     margin-bottom: 0.5rem
+    max-width: 700px
+    width: 100%
+    height: auto
 
   &__title
     font-size: 1.5rem
