--- a/assets/sass/_card.sass
+++ b/assets/sass/_card.sass
@@ -50,7 +50,7 @@
     line-height: 1
     font-weight: 700
     margin-bottom: 0.5rem
-    color: $color-blue-md
+    color: $color-orange
   
 @media screen and (min-width: 768px)
   .card
