--- a/assets/sass/_card.sass
+++ b/assets/sass/_card.sass
@@ -36,7 +36,7 @@
     font-weight: 700
     line-height: 1.3
     margin-bottom: 0.5rem
-    color: $color-blue-md
+    color: $color-blue-dk
 
   &__text
     font-size: 18px
@@ -50,7 +50,7 @@
     line-height: 1
     font-weight: 700
     margin-bottom: 0.5rem
-    color: $color-orange
+    color: $color-blue-dk
   
 @media screen and (min-width: 768px)
   .card
