Lazy loading attribute added to img tags

--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -26,11 +26,13 @@ footer
     li
       list-style-type: none
       margin: 0 1rem
-      // font-weight: 700
-      h5
+      span
+        text-transform: uppercase
         font-weight: 700
         color: #fff
+        font-size: 16px
         line-height: 1.5
+        
 
       
       a
@@ -47,6 +49,7 @@ footer
   &__left
     li
       padding-bottom: 40px
+    
 
   &__ul
     &.flex
