--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
     <!-- <h4>Links</h4> -->
     <div class="footer__container">
       <ul class="footer__left">
-        <li><h5>Garrett Siegel</h5></li>
+        <li><span>Garrett Siegel</span></li>
         <li><a href="tel:5613101404">(561)310-1404</a></li>
         <li><a href="mailto:{{ .Site.Params.email }}" target="_blank">garrett@submurgedcreative.com</a></li>
       </ul>
