Updated images to webp format

--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -2,7 +2,7 @@
 
   <div class="intro__container">
 
-    <img class="intro__image" src="../images/optimized/garrett-siegel-front-end-developer-and-graphic-designer.jpg" alt="Garrett Siegel | Front End Developer and Graphic Designer">
+    <img class="intro__image" src="../images/garrett-siegel-front-end-developer-and-graphic-designer.webp" alt="Garrett Siegel | Front End Developer and Graphic Designer">
     <p class="intro__overline">
       Hi there! I'm
     </p>
