Added Google Analytics to site

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,17 @@
   {{ partial "head.html" . }}
  
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEK9JRFZMX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PEK9JRFZMX');
+</script>
+
 <body>
   {{ partial "nav.html" }}
   <main>
