Added Google Analytics to site - update

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,13 +6,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEK9JRFZMX"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4RBPBKXJ9F"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-PEK9JRFZMX');
+  gtag('config', 'G-4RBPBKXJ9F');
 </script>
 
 <body>
