Hide graphic design tab

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,7 +2,7 @@
   <ul>
     <li><a href='{{ "" | absURL }}'>Home</a></li>
     <li><a href='{{ "web/" | absURL }}'>Web Development</a></li>
-    <li><a href='{{ "graphic/" | absURL }}'>Graphic & Motion Design</a></li>
+    <!-- <li><a href='{{ "graphic/" | absURL }}'>Graphic & Motion Design</a></li> -->
     <li><a href='https://www.upwork.com/fl/garrettsubmurged' target="_blank">Upwork</a></li>
     <!-- <li><a href='{{ "posts/" | absURL }}'>Blog</a></li> -->
   </ul>
