--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -1,5 +1,5 @@
 nav
-  background-color: #303030
+  // background-color: #303030
   ul
     display: flex
     flex-direction: column
@@ -7,8 +7,12 @@ nav
   li
     color: #fff
     list-style-type: none
+
+  li:first-of-type
+    margin-right: auto
   a
-    color: #fff
+    color: #303030
+    font-weight: 700
     text-decoration: none
     font-size: 14px
 
