--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -81,7 +81,7 @@
 
     </div>
     <div class="footer__credits">
-      <p>Professionally designed and developed by   Website made by {{ .Site.Params.name }} - Front End Developer & Graphic Designer - {{ now.Year }}.</p>
+      <p>Professionally designed and developed by {{ .Site.Params.name }} - Front End Developer & Graphic Designer - {{ now.Year }}.</p>
     </div>
     
   </footer>
