--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -1,13 +1,12 @@
 <div class="module intro">
 
   <div class="intro__container">
-
-    <img class="intro__image" src="../images/garrett-siegel-front-end-developer-and-graphic-designer.webp" alt="Garrett Siegel | Front End Developer and Graphic Designer">
-    <p class="intro__overline">
+    <img class="intro__image" src="../images/garrett.jpg" alt="Garrett Siegel | Front End Developer and Graphic Designer">
+    <!-- <p class="intro__overline">
       Hi there! I'm
-    </p>
+    </p> -->
     <h1 class="intro__name">Garrett Siegel</h1>
-    <p class="intro__desc">I'm a creative front-end developer and graphic designer</p>
+    <p class="intro__desc">Pioneering Web Aesthetics</p>
     <button class="intro__button" aria-label="Click to scroll down">
       <svg fill="#000000" width="40px" height="40px" viewBox="0 0 24 24" id="down-circle" data-name="Flat Line" xmlns="http://www.w3.org/2000/svg" class="icon flat-line">
         <circle id="down-circle1" cx="12" cy="12" r="9" style="stroke-width: 2;"></circle>
@@ -22,10 +21,8 @@
 
 <div class="module about">
   <div class="about__copy">
-      <p>As a front-end developer and graphic designer, I specialize in creating exceptional websites and seamless user experiences. I possess over 5 years of industry experience, which has allowed me to develop a skill set that merges a scientific approach to design with a passion for aesthetically pleasing typography. I take pride in creating visually appealing and functional designs, whether I'm working on dynamic website design, single page apps, data visualization, or UI/UX design practices.</p>
-      <p>My work has included building and implementing design systems based on Atomic Design theory and creating dynamic data visualizations. My extensive knowledge of programming languages and technologies such as Vanilla JavaScript, CSS, GSAP, D3, Chart.JS, P5.JS, HTML templating frameworks, Static Site Generators, React, and Next.js, as well as graphic, 3D modeling, and motion design tools, allows me to deliver high-quality work and adapt quickly to new challenges.</p>
-      <p>My unique background in graphic design and front-end development enables me to bring a fresh perspective to every project. By combining my technical expertise with my keen eye for design, I create websites and applications that are both visually stunning and highly functional. I strive to deliver high-quality work on time and on budget, ensuring my clients' satisfaction.</p>
-      <p>In my free time, I enjoy experimenting with new design tools and techniques and am constantly learning to improve my craft.</p>
+      <p>Specializing in web development and enriched by over six years in graphic, animation, and 3D design, I fabricate unique online ecosystems that effectively communicate your brand and resonate with your target audience. My work lies at the intersection of creativity and technology, crafting a harmonious blend of aesthetics and usability.</p>
+      <p>Being a father and once completing an ultra-marathon, I understand the value of commitment and persistence. These qualities translate into my professional life as a web developer and graphic designer. My work reflects my deep love for art, typography, and aesthetically pleasing design, creating a seamless fusion of creativity and technology. Lifelong learning is at the heart of my practice - I'm always on the pulse of the latest trends in web design and front-end development. I am currently honing my skills in atomic design theory to build efficient, reusable web components. My diverse experience, from working with various organizations to freelancing, has bolstered my reputation for delivering excellence. I am passionate about sculpting digital spaces that are not just aesthetically pleasing, but also user-friendly and interactive.</p>
   
   </div>
   
