--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -46,9 +46,9 @@ footer
           justify-content: center
           height: 25px
 
-  &__left
-    li
-      padding-bottom: 40px
+  // &__left
+  //   li
+  //     padding-bottom: 40px
     
 
   &__ul
