--- a/assets/sass/_graphic.sass
+++ b/assets/sass/_graphic.sass
@@ -1,8 +1,12 @@
 .module.graphic-design
+  max-width: 1200px
   padding: 2rem 0
   ul
     li
       list-style-type: none
+
+  .projects
+    // grid-template-columns: 1fr 1fr 1fr
 
 .skills-header
   margin-top: 2rem
